feat(mcq): rewrite Q32-Q33 in java-modules with multi-line educational format
Q32 (split packages): correct=A, distractors propose nonexistent JVM flag,
fat-jar merging, or fake resolution via requires.

Q33 (--add-opens vs --add-exports): correct=C, distractors call them synonyms,
split by compile-time/runtime falsely, or invent --enable-native-access link.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>